[gd_scene load_steps=2 format=2]

[ext_resource path="res://mini_stats_panel.gd" type="Script" id=1]

[node name="mini_stats_panel" type="Panel"]
margin_right = 205.0
margin_bottom = 83.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats_button" type="Button" parent="."]
margin_left = 12.9784
margin_top = 7.15137
margin_right = 185.978
margin_bottom = 27.1514
text = "See Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch_button" type="Button" parent="."]
margin_left = 12.9784
margin_top = 33.1082
margin_right = 185.978
margin_bottom = 53.1082
text = "Switch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel_button" type="Button" parent="."]
margin_left = 13.773
margin_top = 58.0056
margin_right = 186.773
margin_bottom = 78.0056
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="stats_button" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="switch_button" to="." method="_on_switch_button_pressed"]
[connection signal="pressed" from="cancel_button" to="." method="_on_cancel_button_pressed"]
